style.css
body{
    margin: 0px;
    font-family: "Roboto";
    padding-bottom: 200px; /*temporariry padding*/
}
.navBar ul{
    display: flex;
    justify-content: center;
    margin: 0px;
    list-style-type: none;
    color:white;
    justify-content: space-evenly;
}
@media (max-width: 768px){
    .navBar li {
        display: none;
    }
}
.navLi{
    float: left;
    padding: 30px;
    border-radius: 10px;
}
.navLi:hover{
    background-color: rgb(183, 60, 60);
}
.headSection{
    background-color:rgb(38, 40, 44);
}
#reqtangel{
    display: flex;
    padding: 0px 0px 5px 5px;
    background-color:rgb(116, 119, 151);
    align-items: end;
    border: 5px solid white;
    border-radius: 15px;
    width: 113px;
    height: 67px;
}
.esc{
    background-color:rgb(251, 251, 251);
    padding: 8px;
    border-radius: 8px;
}
#logo-title{
    display: flex;
    align-items: end;
    padding: 26px 0px 30px 27px;
}
#title{
    margin: 0px;
    color:white;
    font-weight: 100;
    font-size: 3vw;
    padding-left: 30px;
}
.imgBox{
    position: relative;
    width: 100%;
    height: 100%;
}
.hackerImg{
    max-height: none;
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: relative;
}
.btnsBox{
    display: flex;
    justify-content: center;
    left: 50%;
    transform: translateY(-50%);
}
.onlineBtn{
    padding: 17px;
    background-color: red;
    color:white;
    font-size:24px;
    border: none;
    border-radius:16px;
    cursor: pointer;
    margin-right: 10px;
}
#onsiteBtn{
    padding: 17px;
    background-color: rgb(18, 175, 237);
    color:white;
    font-size:24px;
    border: none;
    border-radius:16px;
    cursor: pointer;
    margin-left: 10px;
}
#onsiteBtn:hover{
    background-color: rgb(56, 113, 144);
    color: rgb(4, 251, 251);
}
.onlineBtn:hover{
    background-color: rgb(107, 61, 61);
    color: rgb(255, 0, 0);
}
@media (max-width: 768px){
    #title{
        max-width: 40px;
        font-size: 24px;
    }
    .btnsBox{
        display: grid;
        padding-top: 50px;
    }
    #onlineBtn{
        margin: 0px 0px 5px 0px;
    }
    #onsiteBtn{
        margin: 5px 0px 0px 0px ;
    }
}
.kommentBox {
    display: flex;
    padding: 0px 40px 0px 40px;
}
.kommentCard{
    display: flex;
    object-fit:cover;
}
.kommenterImg{
    max-width: 75px;
    max-height: 75px;
    object-fit: contain;
    border-radius: 50px;
    padding: 20px;
}
@media(max-width: 768px){
    .kommentBox{
        display: grid;
    }
}
#popularRightNowTitle{
    display: flex;
    justify-content: center;
}
.sliderFelt{
    display: flex;
    justify-content: space-evenly;
}
@media(max-width: 768px){
    .sliderFelt{
        overflow-x: auto;
        scroll-snap-type: x mandatory;
        -webkit-overflow-scrolling: touch;
        padding: 50px;
    }
    .viewCard{
        scroll-snap-align: center;
        margin: 0 10px;
    }
}
.viewCard{
    display: grid;
    max-width: 360px;
    max-height: 440px;
    box-shadow: 0px 0px 10px 0.1px;
    border-radius: 15px;
}
.slidImg{
    max-width: 360px;
    max-height: 440px;
    object-fit: contain;
    border-radius: 15px 15px 0px 0px;
}
.textCard{
    padding: 0px 20px 10px 20px;
    display: grid;
}
.stars-participants{
    display: flex;
    justify-content: space-between;
}
.textCard>h3,.textCard>p,.stars-participants>p{
    /* background-color: red; */
    margin: 0px;
}
.cartBtn{
    background-color: red;
    padding: 10px;
    border-radius: 5px;
    color: white;
    font-weight: bold;
    border: none;
    cursor: pointer;
}
.cartBtn:hover{
    background-color: rgb(121, 74, 74);
    color: rgb(0, 28, 239);
}
.textCard>div{
    display: flex;
    justify-content: end;
}

